// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has border props 1`] = `
.c0 {
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
}

<div
  class="c0"
/>
`;

exports[`has individual border props 1`] = `
.c0 {
  box-sizing: border-box;
  border-right: 1px solid #D9DCE9;
  border-bottom: 1px solid #D9DCE9;
}

<div
  class="c0"
/>
`;

exports[`has shadow props 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 0.25rem;
  box-shadow: 0px 2px 12px rgba(49,52,64,0.2);
}

<div
  class="c0"
/>
`;
